FRONTEND: Fixing reviews letter spacing.

--- a/src/main/webapp/pwa-stylesheets/scss/_common-styles.scss
+++ b/src/main/webapp/pwa-stylesheets/scss/_common-styles.scss
@@ -2,7 +2,7 @@ $line_height_p: 24px;
 $pratilipi_red: #d0021b;
 
 * {
-	font-spacing: 0 !important;
+	letter-spacing: 0 !important;
 }
 .parent-container {
     padding: 0px;
